--- a/css/general-style.css
+++ b/css/general-style.css
@@ -99,6 +99,25 @@ ul {
   line-height: 2;
 }
 
+.color-list {
+  list-style-type: disc;
+  margin-left: 6rem;
+}
+
+.color-list li {
+  padding-top: 2rem;
+  list-style: none;
+  position: relative;
+  padding-left: 1.5em;
+}
+
+.color-list li::before {
+  content: "•";
+  position: absolute;
+  left: 0;
+  color: #FBBF24;
+}
+
 /******************************************************/
 /* GRID  STYLES*/
 /****************************************************/
