--- a/css/general-style.css
+++ b/css/general-style.css
@@ -63,7 +63,7 @@ html {
 }
 
 body {
-  font-family: "Rubik", sans-serif;
+  font-family: "Rubik", sans-serif !important;
   line-height: 1;
   font-weight: 400;
   color: #333;
@@ -86,7 +86,7 @@ ul {
 .heading-primary {
   font-size: 5rem;
   line-height: 2.5;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 .heading-secondary {
