made the arts sector page

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -174,17 +174,6 @@
   padding-top: 2rem;
 }
 
-.sec-icon {
-  vertical-align: middle;
-  margin-right: 0.5rem;
-  color: #FBBF24;
-}
-
-.size-6 {
-  width: 3rem;
-  height: 3rem;
-}
-
 /*********************/
 /* WHY SHSM SECTION */
 /*********************/
@@ -297,9 +286,9 @@
 /* POST-SEC COOP SECTION */
 /*********************/
 
-.post-sec-section {
-  background-color: #0056b3;
-  color: #fff;
+.shsm-pages {
+  /* background-color: #0056b3; */
+  color: #333;
   padding: 4.8rem 0 9.6rem 0;
   margin-bottom: 8rem;
 }
