--- a/docs/css/general-style.css
+++ b/docs/css/general-style.css
@@ -83,6 +83,11 @@ ul {
 /* HEADING & PARAGRAPH STYLES*/
 /****************************************************/
 
+.acc-head,
+.accordion-body {
+  color: #48114C;
+}
+
 .heading-primary {
   font-size: 5rem;
   line-height: 2.5;
@@ -116,6 +121,61 @@ ul {
   position: absolute;
   left: 0;
   color: #FBBF24;
+}
+
+.ordered-li {
+  margin-left: 6rem;
+}
+
+.ordered-li li {
+  padding-top: 2rem;
+  position: relative;
+  padding-left: 1.5em;
+}
+
+.ordered-li li::marker {
+  color: #1E3A8A;
+}
+
+.ordered-li li .color-list {
+  margin-left: 0.2rem;
+}
+
+.shsm-pages .sec-icon {
+  color: #1E3A8A;
+}
+
+.sec-icon {
+  align-content: center;
+  margin-right: 0.5rem;
+  color: #FBBF24;
+}
+
+.shsmheads {
+  font-weight: 600;
+}
+
+.size-6 {
+  width: 3rem;
+  height: 3rem;
+}
+
+/*********************/
+/* SHSM SECTOR PAGES */
+/*********************/
+
+.shsm-pages {
+  padding: 3.2rem 0 9.6rem 0;
+  color: #48114C;
+  margin-bottom: 8rem;
+}
+
+.shsm-banner-img {
+  width: 100%;
+  max-height: 40rem;
+  object-fit: cover;
+  border-radius: 0.5rem;
+  margin-bottom: 1.5rem;
 }
 
 /******************************************************/
