--- a/docs/css/general-style.css
+++ b/docs/css/general-style.css
@@ -79,6 +79,10 @@ ul {
   list-style-type: none;
 }
 
+img {
+  cursor: pointer;
+}
+
 /******************************************************/
 /* HEADING & PARAGRAPH STYLES*/
 /****************************************************/
