--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -154,9 +154,13 @@
   margin-bottom: 4.8rem;
 }
 
+.scholar .heading-primary {
+  margin-bottom: 0;
+}
+
 .shsm-text-box {
   display: grid;
-  gap: 1.2rem;
+  gap: 0rem;
   font-size: 2rem;
   line-height: 1.6;
 }
@@ -168,10 +172,12 @@
 .shsm-list {
   list-style-type: disc;
   margin-left: 6rem;
+  padding-top: 0;
+
 }
 
-.shsm-list li {
-  padding-top: 2rem;
+.shsm-text-box .color-list li {
+  padding-top: 1.2rem;
 }
 
 /*********************/
