made two new shsm pages and modified others

--- a/docs/css/general-style.css
+++ b/docs/css/general-style.css
@@ -180,7 +180,11 @@ img {
 
 .shsmheads {
   font-weight: 600;
+  line-height: 1.4;
+}
 
+#scholar {
+  line-height: 1.6;
 }
 
 /******************************************************/
